syntax = "proto3";

package gidyon.mpesapayments;

option go_package="bitbucket.org/gideonkamau/mpesa-tracking-portal-api/pkg/api/mpesapayment";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/field_behaviour.proto";
import "protoc-gen-swagger/options/annotations.proto";

message MPESAPayment {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "MPESAPayment"
			description: "Lipa na MPESA Payment information"
		}
	};

	string payment_id = 1;
	string tx_type = 2;
	string tx_id = 3;
	string msisdn = 4;
	string names = 5;
	string tx_ref_number = 6;
	int64 tx_timestamp = 7;
	float tx_amount = 8;
	float org_balance = 9;
	int32 business_short_code = 10;
	bool processed = 11;
}

message InitiateSTKPushRequest {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "InitiateSTKPushRequest"
			description: "Initiates a STK push payment to the specified phone number"
			required: ["paid_service", "phone", "amount"]
		}
    };

	string paid_service = 1 [(google.api.field_behavior) = REQUIRED];
	string initiator_id = 2 [(google.api.field_behavior) = REQUIRED];
	string phone = 3 [(google.api.field_behavior) = REQUIRED];
	double amount = 4 [(google.api.field_behavior) = REQUIRED];
}

message InitiateSTKPushResponse {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "InitiateSTKPushResponse"
			description: "Response after initiating a STK push"
		}
    };
    bool progress = 1;
    string message = 2;
}

message CreateMPESAPaymentRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "CreateMPESAPaymentRequest"
			description: "Request to create record of mpesa payment"
			required: ["mpesa_payment"]
		}
	};

	MPESAPayment mpesa_payment = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateMPESAPaymentResponse {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "CreateMPESAPaymentResponse"
			description: "Response after creating payment containing payment id"
		}
	};

	string payment_id = 1;
}

message GetMPESAPaymentRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "GetMPESAPaymentRequest"
			description: "Request to retrieve mpesa payment"
			required: ["payment_id"]
		}
	};

	string payment_id = 1 [(google.api.field_behavior) = REQUIRED];
}

enum ProcessedState {
	PROCESS_STATE_UNSPECIFIED = 0;
	PROCESSED_ONLY = 1;
	UNPROCESSED_ONLY = 2;
	ANY = 3;
}

message ListMPESAPaymentsFilter {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ListMPESAPaymentsFilter"
			description: "Filter payload for querying payments"
		}
	};
	
	string tx_date = 1;
	repeated string msisdns = 2;
	repeated string accounts_number = 3;
	ProcessedState process_state = 4;
}

message ListMPESAPaymentsRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ListMPESAPaymentsRequest"
			description: "Request to retrieve a collection of mpesa payments"
		}
	};

	string page_token = 1;
	int32 page_size = 2;
	ListMPESAPaymentsFilter filter = 3;
}

message ListMPESAPaymentsResponse {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ListMPESAPaymentsResponse"
			description: "Reponse containing a collection of mpesa payments"
		}
	};

	string next_page_token = 1;
	repeated MPESAPayment mpesa_payments = 2;
}

message Scopes {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "Scopes"
			description: "Identities that is allowed access"
		}
	};

	repeated string allowed_phones = 1;
	repeated string allowed_acc_number = 2;
}

message AddScopesRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "AddScopesRequest"
			description: "Request to add scopes"
			required: ["user_id", "scopes"]
		}
	};

	string user_id = 1 [(google.api.field_behavior) = REQUIRED];
	Scopes scopes = 2 [(google.api.field_behavior) = REQUIRED];
}

message AddScopesResponse {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "AddScopesResponse"
			description: "Response containing scopes"
		}
	};

	Scopes scopes = 1;
}

message GetScopesRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "GetScopesRequest"
			description: "Request to scopes for an identity"
			required: ["user_id"]
		}
	};

	string user_id = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetScopesResponse {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "GetScopesResponse"
			description: "Reponse containing scopes"
		}
	};

	Scopes scopes = 1;
}

message ProcessMpesaPaymentRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "ProcessMpesaPaymentRequest"
			description: "Request to update Mpesa transaction processed state"
		}
	};

	string payment_id = 1;
	bool state = 2;
}

message PublishMpesaPaymentRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "PublishMpesaPaymentRequest"
			description: "Request to publish an mpesa transaction for listerners to process"
		}
	};

	string payment_id = 1;
	string initiator_id = 2;
	ProcessedState processed_state = 3;
}

message PublishAllMpesaPaymentRequest {
	option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
		json_schema: {
			title: "PublishAllMpesaPaymentRequest"
			description: "Update Mpesa tx processed state to either true or false"
		}
	};

	int64 since_time_seconds = 1;
	ProcessedState processed_state = 2;
}

// Stores and retrieves LIPA NA MPESA payments 
service LipaNaMPESA {
	// Initiates mpesa payment.
    rpc InitiateSTKPush (InitiateSTKPushRequest) returns (InitiateSTKPushResponse) {
        option (google.api.http) = {
            post: "/api/mpestx/initiate"
            body: "*"
        };
	};

	// Creates a record of mpesa payment.
	rpc CreateMPESAPayment (CreateMPESAPaymentRequest) returns (CreateMPESAPaymentResponse) {
		option (google.api.http) = {
			post: "/api/mpestx"
			body: "*"
		};
	};

	// Retrieves MPESA payment.
	rpc GetMPESAPayment (GetMPESAPaymentRequest) returns (MPESAPayment) {
		option (google.api.http) = {
			get: "/api/mpestx/{payment_id}"
		};
	};

	// Retrieves a collection of MPESA payments.
	rpc ListMPESAPayments (ListMPESAPaymentsRequest) returns (ListMPESAPaymentsResponse) {
		option (google.api.http) = {
			get: "/api/mpestx"
		};
	};

	// Adds scopes to a user.
	rpc AddScopes (AddScopesRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post: "/api/mpestx:scopes"
			body: "*"
		};
	};

	// Retrieves scopes for a user.
	rpc GetScopes (GetScopesRequest) returns (GetScopesResponse) {
		option (google.api.http) = {
			get: "/api/mpestx/scopes/{user_id}"
		};
	};

	// Updates Mpesa transaction processed state to either true or false.
	rpc ProcessMpesaPayment (ProcessMpesaPaymentRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			get: "/api/mpestx/process"
		};
	};

	// Publishes Mpesa statement for listeners to process. Safe to be called many times.
	rpc PublishMpesaPayment (PublishMpesaPaymentRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			get: "/api/mpestx/acition/publish"
		};
	};

	// Publish all failed Mpesa transaction for listeners to process.
	rpc PublishAllMpesaPayment (PublishAllMpesaPaymentRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			get: "/api/mpestx/action/publishall"
		};
	};

}

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
	info: {
		title: "MPESA Payment Service";
		description: "Gateway to confirm and validate MPESA payments, and a CRUD API for the MpesaPayment resource"
		version: "0.1";
		contact: {
			name: "Github <Gideon Kamau>";
			url: "https://github.com/gidyon/mpesapayments/src/master/";
			email: "gkamau@onfonmedia.com";
		};
		license: {
			name: "BSD 3-Clause License";
			url: "https://github.com/gidyon/mpesapayments/src/master/LICENSE.txt";
		};
	};
	schemes: HTTP;
	schemes: HTTPS;
	consumes: "application/json";
	produces: "application/json";
	security_definitions: {
		security: {
		  key: "bearer"
		  value: {
			type: TYPE_API_KEY
			in: IN_HEADER
			name: "Authorization"
			description: "Authentication token, prefixed by Bearer: Bearer <token>"
		  }
		}
	  }
	  security: {
		security_requirement: {
		  key: "bearer"
		}
	  }
};